--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -19,7 +19,7 @@
 }
 
 .hero-overlay h1 {
-    font-size: 12.5vw;
+    font-size: 12vw;
     font-weight: 900;
     letter-spacing: -1px;
     transform: scaleX(1.3);
@@ -55,15 +55,17 @@
     }
  
     .hero-banner {
+        background-image: url(../assets/Images/Intro-mobile.png);
         position: sticky;
         background-position: left center;
         top: 0;
-        width: 800vw;
+        width: 720vw;
         height: 100vh;
     }
  
     .hero-overlay h1 {
-        font-size: 40vw;
+        font-size: 37vw;
+        padding-left: 100px;
         letter-spacing: 0;
     }
 }
