--- a/src/components/Installation.css
+++ b/src/components/Installation.css
@@ -111,7 +111,7 @@
 }
 
 .folder-open__paper h1{
-    font-size: 7.5rem;
+    font-size: 9.5rem;
     margin: 0;
 }
 
@@ -120,7 +120,7 @@
 }
 
 .folder-open__paper li{
-    font-size: 1.8rem;
+    font-size: 2.4rem;
     margin: 2.6vh 0;
 }
 
