--- a/src/components/TacticDashboard.css
+++ b/src/components/TacticDashboard.css
@@ -43,19 +43,19 @@
 
 
 .featured-tactic-section .arm{
-    width: 22vw;
-    height: 6vh;
+    width: 21vw;
+    height: 7vh;
     background-color: black;
-    transform: perspective(100px) rotateX(8deg) scaleX(1.1);
+    transform: perspective(60px) rotateX(8deg) scaleX(1.1);
     transform-origin: top bottom;
-    border-radius: 200px 200px 20px 20px;
+    border-radius: 400px 400px 40px 40px;
 }
 
 .featured-tactic-section h1{
-    margin-top: -4.5vh;
+    margin-top: -4vh;
     margin-bottom: 7vh;
     font-size: 9rem;
-    transform: perspective(100px) rotateX(8deg) scaleX(1.1);
+    transform: perspective(70px) rotateX(8deg) scaleX(1.1);
     transform-origin: top bottom;
     cursor: alias;
     transition: all 0.3s ease;
